# logitech-k650-fix

./: CMakeLists.txt  README.md  logitech-k650-fix.service  main.c
debian/: changelog  control  install
